--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "dark-sky": "^1.0.10",
-    "koa": "^1.2.4"
+    "koa": "^1.2.4",
+    "koa-static": "^2.1.0"
   },
   "devDependencies": {},
   "scripts": {
